5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_1274.log
== TEST (2019-07-01 19:18:32) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(n):
	for j in range(n):
		mat[i,j] = mat(i,j)+1
	print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:18:40) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(n):
	for j in range(n):
		mat[i,j] = mat(i,j)+1
	print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:19:00) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat[i,j] = mat(i,j)+1
	print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:19:14) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat(i,j) = mat(i,j)+1
	print(mat)
		
-- ERROR:
File "XXXX", line 7
    mat(i,j) = mat(i,j)+1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:19:56) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat(i, j) = min(i,j)+1
	print(mat)
		
-- ERROR:
File "XXXX", line 7
    mat(i, j) = min(i,j)+1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:20:05) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat[i, j] = min(i,j)+1
	print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:20:21) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat[i, j] = min(i,j)+1
print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:43:59) 
-- CODE:
from numpy import *
N = int(input("Dimensao da matriz: "))

mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat[i, j] = min(i,j)+1
print(mat)
		
-- EXECUTION TIME:
0.846062
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
